--- a/lojacategorias.css
+++ b/lojacategorias.css
@@ -110,17 +110,21 @@ h2{
   border-radius: 6px;
 }
 
-.card button {
-  margin-top: 10px;
+.botao{
+   margin-top: 10px;
   background: #ffffff;
   color: #b06566;
   border: none;
   padding: 8px 12px;
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 2px;
 }
 .card button:hover {
   background: #dec2bd;
+  color: #ffffff;
+}
+.botao:hover{
+   background: #dec2bd;
   color: #ffffff;
 }
 
@@ -253,4 +257,5 @@ a{
     top: 10px;
     right: 20px;
     cursor: pointer;
+
 }
